--- a/app/src/main/res/layout/lrc_layout.xml
+++ b/app/src/main/res/layout/lrc_layout.xml
@@ -29,22 +29,28 @@
 
         <TextView
             android:id="@+id/song_name"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="Medium Text"
-            android:textAppearance="?android:attr/textAppearanceMedium"/>
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/artist"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:layout_below="@+id/song_name"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:text="Small Text"
-            android:textAppearance="?android:attr/textAppearanceSmall"/>
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:gravity="center"/>
 
     </RelativeLayout>
 
@@ -56,8 +62,8 @@
         android:fillViewport="false"
         >
 
-        <TextView
-            android:id="@+id/textView"
+        <com.mindjet.com.musicplayer.LrcView
+            android:id="@+id/lrcShowView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -80,27 +86,30 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Small Text"
-                android:id="@+id/current_progress"/>
+                android:id="@+id/current_progress"
+                android:layout_gravity="center"/>
 
             <SeekBar
-                android:layout_width="0dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/seekBar"
                 android:max="100"
-                android:layout_weight="0.6"
                 android:progress="20"
-                android:indeterminate="false"/>
+                android:indeterminate="false"
+                android:layout_gravity="center"
+                android:layout_weight="1"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Small Text"
-                android:id="@+id/whole_progress"/>
+                android:id="@+id/whole_progress"
+                android:layout_gravity="center"/>
         </LinearLayout>
 
         <LinearLayout
