--- a/app/src/main/res/layout/lrc_layout.xml
+++ b/app/src/main/res/layout/lrc_layout.xml
@@ -4,22 +4,40 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            >
+
+            <com.mindjet.com.musicplayer.LrcView
+                android:id="@+id/lrcShowView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
+        </ScrollView>
+
     <RelativeLayout
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:background="#fff"
         android:layout_centerHorizontal="true">
 
 
         <Button
-            android:id="@+id/repeat_music"
+            android:id="@+id/lrc_repeat_music"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="repeat"/>
 
         <Button
-            android:id="@+id/shuffle_music"
+            android:id="@+id/lrc_shuffle_music"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -30,126 +48,115 @@
         <TextView
             android:id="@+id/song_name"
             android:layout_width="150dp"
-            android:ellipsize="end"
-            android:singleLine="true"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:singleLine="true"
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:gravity="center"/>
+            android:textColor="#000"/>
 
         <TextView
             android:id="@+id/artist"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
             android:layout_below="@+id/song_name"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:singleLine="true"
             android:text="Small Text"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:gravity="center"/>
+            android:textColor="#000"/>
 
     </RelativeLayout>
 
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/header_layout"
-        android:fillViewport="false"
-        >
 
-        <com.mindjet.com.musicplayer.LrcView
-            android:id="@+id/lrcShowView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Lyric shown here"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
-    </ScrollView>
 
     <LinearLayout
+        android:id="@+id/footer_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="#fff"
         android:layout_centerHorizontal="true"
-        android:id="@+id/footer_layout"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/seekbar_layout"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/current_progress"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Small Text"
-                android:id="@+id/current_progress"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceSmall"/>
 
             <SeekBar
+                android:id="@+id/lrc_seekBar"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/seekBar"
-                android:max="100"
-                android:progress="20"
-                android:indeterminate="false"
                 android:layout_gravity="center"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:indeterminate="false"
+                android:max="100"
+                android:progress="20"/>
 
             <TextView
+                android:id="@+id/whole_progress"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:text="Small Text"
-                android:id="@+id/whole_progress"
-                android:layout_gravity="center"/>
+                android:textAppearance="?android:attr/textAppearanceSmall"/>
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/buttonGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/buttonGroup">
+            android:orientation="horizontal">
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="sear"
-                android:layout_weight="0.2"
-                android:id="@+id/search"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="pre"
-                android:layout_weight="0.2"
-                android:id="@+id/previous"/>
-
-            <Button
+                android:id="@+id/lrc_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.2"
-                android:text="play"
-                android:id="@+id/play"/>
+                android:text="sear"/>
 
             <Button
+                android:id="@+id/lrc_previous"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.2"
-                android:layout_height="wrap_content"
-                android:text="next"
-                android:id="@+id/button"/>
+                android:text="pre"/>
 
             <Button
+                android:id="@+id/lrc_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/button2"
+                android:layout_weight="0.2"
+                android:text="play"/>
+
+            <Button
+                android:id="@+id/lrc_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.2"
+                android:text="next"/>
+
+            <Button
+                android:id="@+id/lrc_queue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.2"
                 android:text="queue"/>
         </LinearLayout>
