--- a/app/src/main/res/layout/myactionbar.xml
+++ b/app/src/main/res/layout/myactionbar.xml
@@ -7,17 +7,18 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:background="#f23c51"
-        android:layout_height="60dp"
-        android:gravity="center">
+        android:background="#ff6231"
+        android:layout_height="80dp"
+        android:gravity="center_horizontal|bottom">
 
         <TextView
+            android:layout_marginBottom="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="MusicPlayer"
             android:textColor="#fff"
-            android:textSize="55px"
+            android:textSize="60px"
             android:id="@+id/textView2"
             />
     </LinearLayout>
