--- a/app/src/main/res/layout/lrc_layout.xml
+++ b/app/src/main/res/layout/lrc_layout.xml
@@ -4,21 +4,47 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
+            android:background="#fff"
             android:layout_height="match_parent"
             android:fillViewport="true"
             >
 
-            <com.mindjet.com.musicplayer.Utils.LrcView
-                android:id="@+id/lrcShowView"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceLarge"/>
+                android:background="#fff"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:src="@mipmap/ic_launcher"
+                    android:id="@+id/lrc_album"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop"
+                    android:layout_height="match_parent"/>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:background="#78000000"
+                    android:layout_height="match_parent"/>
+
+
+                <com.mindjet.com.musicplayer.Utils.LrcView
+                    android:id="@+id/lrcShowView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textColor="#fff"
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+
+            </FrameLayout>
+
         </ScrollView>
 
     <RelativeLayout
