--- a/app/src/main/res/layout/introduce.xml
+++ b/app/src/main/res/layout/introduce.xml
@@ -15,13 +15,22 @@
             android:layout_height="wrap_content"
             android:id="@+id/imageView"
             android:src="@mipmap/play_continue_orange"
+            android:layout_marginBottom="15dp"
             android:layout_gravity="center"/>
 
         <TextView
             android:layout_width="wrap_content"
-            android:text="The best MusicPlayer"
+            android:text="The MusicPlayer"
             android:fontFamily="sans-serif-condensed"
             android:textSize="30sp"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="30sp"
+            android:layout_gravity="center"
+            android:text="in Your Pocket"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
